# Dev-Foundation-ver2

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Makefile  README.md  foundationd  harness  knowledge  pyproject.toml  refactor-instructions.md  refactor.md
.agents/policies/: default.json
.agents/skills/: SKILL_INDEX.md
.codex/: config.toml
.harness/: owners.yaml  policy.yaml  review.yaml  semantic_ai_reviewer.py  verifiers.yaml
.serena/: project.yml
Plan/: README.md
Plan/Harness-refactor/: index.yaml
Plan/active/: specialist-agent-workflow-design.md  workflow-implementation-architecture.md
Plan/bench-compare-20260612/: index.yaml
Plan/codex-operationalization-implementation/: index.yaml
Plan/contract-lightening-20260610/: index.yaml
Plan/foundation-subagent-spec-workflow/: index.yaml
Plan/harness-review/: harness-implementation-report.md  hypothesis-driven-refactor-20260611.md  implementation-status.md  index.yaml  measurement-and-context-build-plan.md  minimum-foundation-build-plan.md  spec-gating-and-eval-pipeline.md
artifact/: Gpt-pro-review  README.md
configs/: README.md
docs/: 01-agent-operating-contract.md  02-output-verification-contract.md  03-repo-boundary-and-storage-contract.md  data_policy.md  external-facing-overview.md  license_review.md  quant-agent-guide.md  quant-implementation-plan.md  stack_decision.md  workflow-core-state-model.md
hooks/: pre-commit  pre-push
scripts/: abrun.py  agent_operational_checks.py  bench_compare.py  check-audit-provenance.py  check-context-scope.py  check-demo-workflow.py  check-frozen-paths.py  check-lane-map.py  check-operational-scorecard.py  check-personal-workflow-app-e2e.sh  check-repo-hygiene.sh  check-residual-risk-carryover.py  check-result-envelope.py  check-review-convergence.py  check-skill-routes.py  check-workflow-state.py  check_runner.py  commondb-mcp-dry-run.py  completion_gate.py  enable-commondb-mcp-local.sh  hook_post_tool_use.py  hook_session_start.py  hook_stop.py  install-personal-workflow-app.sh  measure_eval.py  nfr_metric.py  quality_gate.py  run-approved-work-contract.py  run-workflow-console.py  run_eval.py  surface_issues.py  verdict.py
src/: api.py  llm.py  main.py  preprocessor.py  report_quality_guidance.py  report_quality_missing_data.py  report_quality_numeric_grounding.py  report_quality_source_inventory.py  structured.py  workflow.py  workflow_agents.py  workflow_models.py  workflow_runtime.py  workflow_validation.py
src/prompts/: README.md  (+3 more)
templates/: README.md  app-server-run-event.yaml  app-server-thread-link.yaml  approved-spec-freeze.yaml  approved-work-contract.yaml  audit-trail-index.yaml  behavior-requirements.yaml  budget-override-record.yaml  change-impact-classification-record.yaml  check-result-envelope.yaml  claude-hooks-settings.json  codex-config.toml.example  codex-hooks.json  codex-sdk-run-config.yaml  context-request.yaml  context-result.yaml  context-scope-manifest.yaml  convergence-decision-record.yaml  data-contract.yaml  detailed-spec.md  evidence-record.yaml  exception-pack.yaml  final-handoff-record.yaml  fix-handoff-record.yaml  fix-review-record.yaml  goal-brief.md  implementation-policy-record.yaml  inconsistency-register.yaml  interface-contract.yaml  mini-spec.md  narrow-review-record.yaml  nfr-pack.yaml  operational-scorecard.yaml  overview-spec.md  parallel-lane-map.yaml  phase-gate-matrix.yaml  project-storage-map.yaml  requirement-traceability-matrix.yaml  residual-risk-carryover-record.yaml  review-assignment-record.yaml  (+12 more)
tests/: test_ab_pipeline_acceptance.py  test_agent_assets.py  test_agent_operational_helpers.py  test_api_smoke.py  test_audit_provenance_check.py  test_check_result_envelope.py  test_clean_checkout_reproducibility.py  test_cli_smoke.py  test_code_quality.py  test_context_scope_check.py  test_contract_models.py  test_foundation_integrity.py  test_hook_scripts.py  test_lane_map_check.py  test_llm_provider.py  test_metric_cli_exit_codes.py  test_operational_scorecard_check.py  test_preprocessor.py  test_quant_directory_structure.py  test_quant_environment_contract.py  test_report_quality_full.py  test_residual_risk_carryover_check.py  test_review_convergence_check.py  test_safety_guards.py  test_skill_route_check.py  test_workflow_agents.py  test_workflow_api.py  test_workflow_models.py
(+515 files in other folders)
