[project]
name = "foundation-development"
version = "0.1.0"
description = "Agent-safe quant research and backtesting foundation"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "rich>=13.9,<15.0",
    "typer>=0.15,<1.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0,<7.0",
    "mypy>=1.15.0,<2.0",
    "pytest>=8.3.0,<10.0",
    "pytest-cov>=6.0,<8.0",
    "pyyaml>=6.0.0,<7.0",
    "ruff>=0.11.0,<1.0",
    "types-PyYAML>=6.0.12,<7.0",
]
data = [
    "duckdb>=1.1,<2.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "pandera[polars]>=0.22,<1.0",
    "polars>=1.0,<2.0",
    "pyarrow>=16.0,<23.0",
]
crypto-data = [
    { include-group = "data" },
    "aiohttp>=3.10,<4.0",
    "ccxt>=4.4,<5.0",
    "orjson>=3.10,<4.0",
    "websockets>=14.0,<17.0",
]
research = [
    { include-group = "crypto-data" },
    "cvxpy>=1.6,<2.0",
    "mlflow>=2.17,<4.0",
    "optuna>=4.0,<5.0",
    "scikit-learn>=1.5,<2.0",
    "scipy>=1.14,<2.0",
    "statsmodels>=0.14,<1.0",
]
screening = [
    { include-group = "research" },
    "numba>=0.61,<1.0",
]
baseline = [
    { include-group = "crypto-data" },
    "numba>=0.61,<1.0",
]
nautilus = [
    { include-group = "crypto-data" },
    "nautilus-trader>=1.0,<2.0",
]
hft = [
    { include-group = "crypto-data" },
    "hftbacktest>=2.0,<3.0",
    "numba>=0.61,<1.0",
]
hummingbot-api = [
    "httpx>=0.28,<1.0",
]
monitoring = [
    "opentelemetry-api>=1.28,<2.0",
    "opentelemetry-sdk>=1.28,<2.0",
    "prometheus-client>=0.21,<1.0",
]
notebooks = [
    { include-group = "research" },
    "ipykernel>=6.0,<8.0",
    "jupyterlab>=4.0,<5.0",
    "jupytext>=1.16,<2.0",
    "marimo>=0.10,<2.0",
]
performance = [
    "memray>=1.15,<2.0",
    "pyinstrument>=5.0,<6.0",
    "pytest-benchmark>=5.0,<6.0",
]
reporting = [
    "quantstats>=0.0.62,<0.1",
]

[tool.uv]
package = false

[tool.uv.dependency-groups]
data = { requires-python = ">=3.12,<3.14" }
crypto-data = { requires-python = ">=3.12,<3.14" }
research = { requires-python = ">=3.12,<3.14" }
screening = { requires-python = ">=3.12,<3.14" }
baseline = { requires-python = ">=3.12,<3.14" }
nautilus = { requires-python = ">=3.12,<3.14" }
hft = { requires-python = ">=3.12,<3.14" }
hummingbot-api = { requires-python = ">=3.12,<3.14" }
monitoring = { requires-python = ">=3.12,<3.14" }
notebooks = { requires-python = ">=3.12,<3.14" }
performance = { requires-python = ">=3.12,<3.14" }
reporting = { requires-python = ">=3.12,<3.14" }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".agents/skills",
    ".codex/skills",
    "archive",
    "plugins",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
