[project]
name = "foundation-development"
version = "0.1.0"
description = "Small agent foundation docs and verification checks"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pydantic>=2.7.0",
    "pytest>=8.3.0",
    "pyyaml>=6.0.0",
    "ruff>=0.11.0",
    "types-PyYAML>=6.0.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".agents/skills",
    ".codex/skills",
    "archive",
    "plugins",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "C90",
    "SIM",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Grandfathered legacy heavy-contract validators; new code meets C901.
"scripts/agent_operational_checks.py" = ["C901"]
"scripts/check-lane-map.py" = ["C901"]
"tests/test_contract_models.py" = ["C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["tests"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
